--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
     <version>4.3.5</version>
 </dependency>
 
+<dependency>
+  <groupId>org.apache.commons</groupId>
+  <artifactId>commons-lang3</artifactId>
+  <version>3.5</version>
+</dependency>
+
     </dependencies>
 	<profiles>
 		<profile>
